--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@module-federation/enhanced": "^0.17.1",
     "@module-federation/vite": "^1.7.1",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^18.3.1",
