--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "dependencies": {
     "@module-federation/enhanced": "^0.17.1",
     "@module-federation/vite": "^1.7.1",
-    "@tailwindcss/vite": "^4.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "react-router": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
@@ -28,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
