--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:prepare": "npm run build && cp _redirects dist/_redirects",
     "lint": "eslint .",
     "preview": "vite preview"
   },
